# Law

./: README.md  pyproject.toml
chatbot/: __init__.py  bot.py  cli.py
tests/: test_bot.py
